# rules_cc_module

./: .bazeliskrc  .bazelrc  .gitignore  ARCHITECTURE.md  BUILD.bazel  MODULE.bazel  README.md
cc_module/: BUILD.bazel  attrs.bzl  cc_helper.bzl  cc_module_rules.bzl  defs.bzl  providers.bzl
examples/hello-module/: .bazelrc  MODULE.bazel  README.md  update_module_deps_in_BUILD.py
examples/hello-module/src/: BUILD  main.cpp
examples/hello-module/src/module1/: module1.ixx
examples/hello-module/src/module2/: header_only.hpp  module2-part.ixx  module2-part_impl.cpp  module2.ixx  module2_impl.cpp
examples/hello-module/src/module3/: module3.ixx  module3_impl.cpp
test/: BUILD.bazel  PARALLEL_COMPILATION.md  circular_test.BUILD  header_only_main.cpp  header_only_module.ixx  header_only_module_main.cpp  main.cpp  math_common.h  math_impl.cpp  math_module.ixx  parallel_test_main.cpp  scenarios.ixx  scenarios_impl.h  scenarios_main.cpp  test_base1.ixx  test_base2.ixx  test_derived.ixx  test_main.ixx
tools/: BUILD  scan_module_deps.cpp
