# Copyright 2025 rules_cc_module authors
# Licensed under the Apache License, Version 2.0

package(default_visibility = ["//visibility:public"])

# Export the Starlark files for use in other BUILD files
exports_files([
    "defs.bzl",
    "cc_module_library.bzl",
    "cc_module_binary.bzl",
    "providers.bzl",
    "utils.bzl",
    "actions.bzl",
])
